package calculator.domain;

public enum OperatorType {
    ADD,
    SUBTRACT,
    DIVIDE,
    MULTIPLY,
}
